; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn_phy_g.c_bwn_gtab_write.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/bwn/extr_if_bwn_phy_g.c_bwn_gtab_write.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bwn_mac = type { i32 }

@BWN_PHY_GTABCTL = common dso_local global i32 0, align 4
@BWN_PHY_GTABDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bwn_mac*, i64, i64, i64)* @bwn_gtab_write to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bwn_gtab_write(%struct.bwn_mac* %0, i64 %1, i64 %2, i64 %3) #0 {
  %5 = alloca %struct.bwn_mac*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  store %struct.bwn_mac* %0, %struct.bwn_mac** %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.bwn_mac*, %struct.bwn_mac** %5, align 8
  %10 = load i32, i32* @BWN_PHY_GTABCTL, align 4
  %11 = load i64, i64* %6, align 8
  %12 = load i64, i64* %7, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @BWN_PHY_WRITE(%struct.bwn_mac* %9, i32 %10, i64 %13)
  %15 = load %struct.bwn_mac*, %struct.bwn_mac** %5, align 8
  %16 = load i32, i32* @BWN_PHY_GTABDATA, align 4
  %17 = load i64, i64* %8, align 8
  %18 = call i32 @BWN_PHY_WRITE(%struct.bwn_mac* %15, i32 %16, i64 %17)
  ret void
}

declare dso_local i32 @BWN_PHY_WRITE(%struct.bwn_mac*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
